--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,13 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://alexbain.github.com
+title: alexba.in
+subtitle: A collection of thoughts on JavaScript, Ruby, and Cognitive Science.
+author: Alex Bain
 simple_search: http://google.com/search
-description:
+description: Hi! I maintain this blog to document the things that fascinate me.
+
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -19,7 +20,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: alex@alexba.in
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -58,13 +59,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: alexbain
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: alexsbain
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
