--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: Hi! I maintain this blog to document the things that fascinate me.
 date_format: "ordinal"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
-subscribe_rss: /atom.xml
+subscribe_rss: http://feeds.feedburner.com/alexbain
 subscribe_email:
 # RSS feeds can list your email address if you like
 email: alex@alexba.in
@@ -86,11 +86,11 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user:
+delicious_user: alexsbain
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: alexbain
 disqus_show_comment_count: false
 
 # Google Analytics
