Time to Information

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://alexbain.github.com
 title: alexba.in
-subtitle: A collection of thoughts on JavaScript, Ruby, and Cognitive Science.
+subtitle: A collection of thoughts on technology, cognitive science, and life.
 author: Alex Bain
 simple_search: http://google.com/search
 description: Hi! I maintain this blog to document the things that fascinate me.
