Updating URL to http://alexba.in

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://alexbain.github.com
+url: http://alexba.in
 title: alexba.in
 subtitle: A collection of thoughts on technology, cognitive science, and life.
 author: Alex Bain
