--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user: alexsbain
+delicious_user:
 delicious_count: 3
 
 # Disqus Comments
