--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 url: http://alexba.in
 title: alexba.in
-subtitle: A collection of thoughts on technology, cognitive science, and life.
+subtitle: A technical blog about open source hardware and software.
 author: Alex Bain
 simple_search: http://google.com/search
-description: Hi! I maintain this blog to document the things that fascinate me.
+description: A technical blog about open source hardware and software.
 
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
@@ -46,7 +46,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
